<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
                android:id="@+id/et_name_input"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ib_name_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:lines="1"
                android:hint="@string/city_name_hint"
        />
        <ImageButton
                android:id="@+id/ib_name_search"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search_black_24dp"
                app:layout_constraintTop_toTopOf="@id/et_name_input"
                app:layout_constraintBottom_toBottomOf="@id/et_name_input"
                app:layout_constraintEnd_toEndOf="parent"
                android:tint="@color/colorPrimary"/>

        <EditText
                android:id="@+id/et_zip_input"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/et_name_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ib_zip_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:lines="1"
                android:hint="@string/zip_code_hint"
        />
        <ImageButton
                android:id="@+id/ib_zip_search"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search_black_24dp"
                app:layout_constraintTop_toTopOf="@id/et_zip_input"
                app:layout_constraintBottom_toBottomOf="@id/et_zip_input"
                app:layout_constraintEnd_toEndOf="parent"
                android:tint="@color/colorPrimary"/>

        <com.cdmp.weatherapp.presentation.InfoCustomView
                android:id="@+id/i_max_temp"
                app:header="@string/max_temp_label"
                app:image="@drawable/ic_temperature"
                android:textSize="18sp"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@id/i_max_humidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_zip_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"/>
        <com.cdmp.weatherapp.presentation.InfoCustomView
                android:id="@+id/i_max_humidity"
                app:header="@string/max_humidity_label"
                app:image="@drawable/ic_humidity"
                app:layout_constraintBottom_toTopOf="@id/i_max_rain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/i_max_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"/>
        <com.cdmp.weatherapp.presentation.InfoCustomView
                android:id="@+id/i_max_rain"
                app:header="@string/max_raining_label"
                app:image="@drawable/ic_rain"
                app:layout_constraintBottom_toTopOf="@id/i_max_speed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/i_max_humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"/>
        <com.cdmp.weatherapp.presentation.InfoCustomView
                app:header="@string/max_wind_speed_label"
                app:image="@drawable/ic_wind"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/i_max_rain"
                android:id="@+id/i_max_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"/>

        <ProgressBar
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintTop_toBottomOf="@id/et_zip_input"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>